Asociar app con API para búsqueda y crear diversos componentes

--- a/src/components/SearchResults/styles.css
+++ b/src/components/SearchResults/styles.css
@@ -21,3 +21,9 @@ button {
         transform: scale(1.03);
     }
 }
+
+.song-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
